--- a/booking/booking_app/template/home.html
+++ b/booking/booking_app/template/home.html
@@ -31,33 +31,35 @@
         <!--    content trip    -->
             <div style="margin: .5% 0 .5% 0" class="carousel-content" data-flickity='{ "groupCells": true }'>
                 {% for trip in trip %}
-                    <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
+                    {% if trip.special is False %}
+                        <div class="carousel-cell-card">
+                          <div class="card" style="width: 100%; height:100%;">
 
-                      <div class="carousel-images" data-flickity>
-                          <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo1.url }}" class="card-img-top" alt="..."></div>
-                          {% if trip.photo2 %}
-                          <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo2.url }}" class="card-img-top" alt="..."></div>
-                          {% endif %}
-                          {% if trip.photo3 %}
-                          <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo3.url }}" class="card-img-top" alt="..."></div>
-                          {% endif %}
+                              <div class="carousel-images" data-flickity>
+                                  <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo1.url }}" class="card-img-top" alt="..."></div>
+                                  {% if trip.photo2 %}
+                                  <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo2.url }}" class="card-img-top" alt="..."></div>
+                                  {% endif %}
+                                  {% if trip.photo3 %}
+                                  <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo3.url }}" class="card-img-top" alt="..."></div>
+                                  {% endif %}
 
+                                </div>
+
+                              <div class="card-body" style="padding :0;">
+                                <h3 class="card-title">{{ trip.name }}</h3>
+                                <p class="text-secondary card-text" style="font-size: 12px; margin: 2%; margin-top:0;">{{ trip.day }}</p>
+                                <p class="card-text" style="margin: 0">Trip Price</p>
+                                <p class="text-secondary card-text2" style="font-size: 12px; margin: 2%; margin-top:0;">IDR {{ trip.Price }} (Min 6-10 People) </p>
+                                <p class="card-text" style="margin: 0;">Quota (Max/20)</p>
+                                <p class="text-secondary card-text" style="font-size: 12px; margin: 2%; margin-top:0;">Available: {{ trip.seat }} quota</p>
+                                <p class="card-text" style="margin: 0;">Meeting Point</p>
+                                <p class="text-secondary card-text" style="font-size: 12px; margin: 2%; margin-top:0;">{{ trip.meeting }}</p>
+                                <a href="#" class="btn btn-primary">Booking</a>
+                              </div>
+                            </div>
                         </div>
-
-                      <div class="card-body" style="padding :0;">
-                        <h3 class="card-title" style="font-family: 'airbnb_cereal_appbold';">{{ trip.name }}</h3>
-                        <p class="text-secondary card-text" style="font-size: 12px; margin: 2%; margin-top:0;">{{ trip.day }}</p>
-                        <p class="card-text" style="margin: 0">Trip Price</p>
-                        <p class="text-secondary card-text2" style="font-size: 12px; margin: 2%; margin-top:0;">IDR {{ trip.Price }} (Min 6-10 People) </p>
-                        <p class="card-text" style="margin: 0;">Quota (Max/20)</p>
-                        <p class="text-secondary card-text" style="font-size: 12px; margin: 2%; margin-top:0;">Available: {{ trip.seat }} quota</p>
-                        <p class="card-text" style="margin: 0;">Meeting Point</p>
-                        <p class="text-secondary card-text" style="font-size: 12px; margin: 2%; margin-top:0;">{{ trip.meeting }}</p>
-                        <a href="#" class="btn btn-primary">Booking</a>
-                      </div>
-                    </div>
-              </div>
+                    {% endif %}
                 {% endfor %}
             </div>
 
@@ -66,165 +68,29 @@
         <!--  content special trip  -->
             <div style="margin: .5% 0 .5% 0" class="carousel-content" data-flickity='{ "groupCells": true }'>
                 <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">
-                            tanggal <br>
-                            tinggi <br>
-                            190<br>
-                            tinggi <br>
-                            190<br>
-                            tinggi <br>
-                            190<br>
+                    {% for trip in trip %}
+                        {% if  trip.special is True %}
+                            <div class="card" style="width: 100%; height:100%;">
 
-                        </p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
-                <div class="carousel-cell-card">
-                  <div class="card" style="width: 100%; height:100%;">
-                      <img src="https://storage.googleapis.com/gd-wagtail-prod-assets/original_images/evolving_google_identity_videoposter_006.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                    </div>
-              </div>
+                          <div class="carousel-images" data-flickity>
+                              <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo1.url }}" class="card-img-top" alt="..."></div>
+                              {% if trip.photo2 %}
+                              <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo2.url }}" class="card-img-top" alt="..."></div>
+                              {% endif %}
+                              {% if trip.photo3 %}
+                              <div class="carousel-cell-images"><img style="height:100%;" src="{{ trip.photo3.url }}" class="card-img-top" alt="..."></div>
+                              {% endif %}
 
+                            </div>
+
+                          <div class="card-body" style="padding :0;">
+                            <h3 class="card-title">{{ trip.name }}</h3>
+                            <p class="text-secondary card-text" style="font-size: 15px; margin: 2%; margin-top:0;">{{ trip.special_desc }}</p>
+                          </div>
+                        </div>
+                        {% endif %}
+                    {% endfor %}
+              </div>
             </div>
     <!--  end content  -->
 {% endblock content %}
