--- a/booking/staticfiles/css/home.css
+++ b/booking/staticfiles/css/home.css
@@ -3,7 +3,7 @@
 body {
    font-family: sans-serif;
 }
-
+/*  carousel */
 .carousel{
    margin:1%;
 }
@@ -26,10 +26,10 @@ body {
      height: 100%;
  }
 }
+/*  end carousel */
 
 
-
-
+/*  content carousel */
 .carousel-cell-card {
   width: 25%;
   height: 60vh;
@@ -43,6 +43,43 @@ body {
     position: absolute;
     left: 45%;
     color: white;
-    top: 18%;
+    top: 15%;
     text-align: center;
 }
+
+.card-body {
+    text-align: center;
+
+}
+/*  end content carousel */
+
+/*  image carousel */
+
+.carousel-images {
+  height:45%;
+  padding: 1%;
+}
+
+.carousel-cell-images {
+  width: 100%;
+  height: 100%;
+  margin-right: 10px;
+  border-radius: 5px;
+  counter-increment: gallery-cell;
+  margin-right: 20px;
+  overflow: hidden;
+}
+
+.carousel-cell-images img {
+  display: block;
+  height: 200px;
+}
+
+@media screen and ( min-width: 768px ) {
+  .carousel-cell-images img {
+    height: 400px;
+  }
+}
+
+
+/*  end image carousel */
